[tool.poetry]
name = "mmboto"
version = "0.1.0"
description = "Marshmallow schema for AWS botocore"
authors = ["shawalli <shawn.p.wallis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
